fix: 去掉input的size&修复collapse样式 (#5985)

--- a/packages/amis-ui/scss/_components.scss
+++ b/packages/amis-ui/scss/_components.scss
@@ -1919,8 +1919,6 @@
   --collapse-disabled-header-fontWeight: var(--fonts-weight-6);
   --collapse-disabled-header-lineHeight: var(--fonts-lineHeight-2);
   --collapse-disabled-header-bg-color: var(--colors-neutral-fill-10);
-  --collapse-disabled-header-hover-bg-color: var(--colors-neutral-fill-6);
-  --collapse-disabled-header-hover-color: var(--colors-neutral-text-6);
   --collapse-disabled-content-color: var(--colors-neutral-text-2);
   --collapse-disabled-content-fontSize: var(--fonts-size-8);
   --collapse-disabled-content-fontWeight: var(--fonts-weight-6);
